--- a/main.css
+++ b/main.css
@@ -5,11 +5,18 @@ General
 
 ul {
     list-style: none;
+    padding-left: 15px;
 }
 
 body {
     font-size: 1em;
     font-family: Helvetica;
+    color: #cbcbca;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
 /************
@@ -23,15 +30,20 @@ MAIN
 
 .octocat {
     float: left;
-    margin-right: 20px;
+    margin-right: 25px;
     margin-top: 10px;
 
 }
 
 .octocat img {
-    height: 440px;
-    border: 1px solid #d6d6d6;
+    height: 430px;
+    border: 1px solid #cbcbca;
     border-radius: 3px;
+}
+
+.octocat:first-child {
+    position: relative;
+    left: 0px;
 }
 
 .octocat:nth-child(3) {
@@ -40,7 +52,7 @@ MAIN
 
 .image-footer {
     padding: 15px 0;
-    border-bottom: 1px solid #d6d6d6;
+    border-bottom: 1px solid #cbcbca;
 }
 
 
@@ -53,11 +65,22 @@ MAIN
 
 
 .image-caption {
+    color: #777;
     display: inline;
     float: right;
+    font-weight: 700;
 }
 
 .authors {
     display: inline;
     float: right;
+}
+
+.image-number {
+    font-weight: 700;
+}
+
+.image-caption a {
+    font-weight: 900;
+    color: black;
 }
