--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ General
 
 ul {
     list-style: none;
-    padding-left: 15px;
+    padding-left: 10px;
 }
 
 body {
@@ -36,7 +36,7 @@ MAIN
 }
 
 .octocat img {
-    height: 430px;
+    height: 445px;
     border: 1px solid #cbcbca;
     border-radius: 3px;
 }
@@ -74,6 +74,10 @@ MAIN
 .authors {
     display: inline;
     float: right;
+}
+
+.image-number::before {
+    content: "#";
 }
 
 .image-number {
